# Adaptive-Volatility-Regime-Based-Execution-and-Risk-Framework

./: .gitignore  Adaptive-Volatility-Regime-Based-Execution-and-Risk-Framework.ipynb  CMakeLists.txt  LICENSE  README.md
AdaptiveVolFramework/: README.md
AdaptiveVolFramework/include/adaptive_exec/: VolatilityEstimators.hpp
AdaptiveVolFramework/include/adaptive_exec/analytics/: PerformanceMetrics.hpp
AdaptiveVolFramework/include/adaptive_exec/backtest/: BacktestEngine.hpp
AdaptiveVolFramework/src/: ExecutionEngine.cpp  HawkesModel.cpp  main.cpp
AdaptiveVolFramework/src/utils/: DataValidation.cpp
AdaptiveVolFramework/tests/: test_hmm.cpp  test_integration.cpp  test_metrics.cpp
include/adaptive_exec/: ExecutionEngine.hpp  HARModel.hpp  HMMRegimeDetector.hpp  HawkesModel.hpp  RiskManager.hpp  Types.hpp  VolatilityEstimators.hpp
include/adaptive_exec/analytics/: ReportGenerator.hpp
include/adaptive_exec/backtest/: BacktestEngine.hpp
include/adaptive_exec/utils/: DataValidation.hpp
src/: ExecutionEngine.cpp  HARModel.cpp  HMMRegimeDetector.cpp  RiskManager.cpp  VolatilityEstimators.cpp  main.cpp
src/analytics/: PerformanceMetrics.cpp  ReportGenerator.cpp
src/backtest/: BacktestEngine.cpp
tests/: test_volatility.cpp
